--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 /[Uu]ser[Ss]ettings/
 /[Vv]s/
 
+/obj/
+/.vs/
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
@@ -71,4 +74,4 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
-
+.vs/Nona_VR_Spacestation/v16/.suo
